--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "dev:server": "cross-env LOCAL=true tsc-watch --p \"./tsconfig.server.json\" --onSuccess \"nodemon ./dist/index.js\" ",
     "dev:client": "webpack-dev-server --mode development --env.LOCAL=true --env.PUBLIC_PATH=http://localhost:3010/",
     "dev:tasks": "gulp",
+    "dev:database": "docker-compose up -d",
     "build": "concurrently -c 'blue' -n w: npm:build:*",
     "build:tasks": "gulp",
     "build:server": "tsc --p \"./tsconfig.server.json\"",
     "build:client": "webpack --mode production --env.LOCAL=false",
     "start": "npm run build && npx pm2 start ecosystem.config.js --no-daemon",
-    "test": "mocha --exit ./dist/__test/**/*.js",
-    "script": "cd src/scripts && ts-node"
+    "test:client": "jest --watch",
+    "test:server": "mocha --exit ./dist/__test/**/*.js",
+    "analyze-react-build": "webpack --mode=production --env.analyze=true",
+    "nuke:database": "docker-compose down -v"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -19,11 +22,15 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@testing-library/dom": "^7.20.0",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.5",
+    "@testing-library/user-event": "^12.0.11",
     "@types/compression": "^1.7.0",
     "@types/dotenv": "^8.2.0",
     "@types/ejs": "^3.0.4",
     "@types/express": "^4.17.6",
-    "@types/jest": "^26.0.3",
+    "@types/jest": "^26.0.4",
     "@types/mocha": "^7.0.2",
     "@types/mongoose": "^5.7.29",
     "@types/morgan": "^1.9.1",
@@ -31,6 +38,8 @@
     "@types/nodemon": "^1.19.0",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.2.0",
@@ -40,8 +49,10 @@
     "fork-ts-checker-webpack-plugin": "^5.0.6",
     "jest": "^26.1.0",
     "mocha": "^8.0.1",
+    "msw": "^0.19.5",
     "nodemon": "^2.0.4",
     "pm2": "^4.4.0",
+    "ts-jest": "^26.1.1",
     "tsc-watch": "^4.2.9",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
@@ -58,6 +69,8 @@
     "mongoose": "^5.9.21",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   }
 }
