--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
+    "kremling": "^2.0.4",
     "mongoose": "^5.9.21",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
