--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "spamfam",
+  "license": "MIT",
+  "author": "Sean White (seanbrwh@gmail.com)",
   "scripts": {
     "dev": "concurrently -c 'red' -n w: yarn:dev:*",
     "dev:server": "cross-env LOCAL=true tsc-watch --p \"./tsconfig.server.json\" --onSuccess \"nodemon ./dist/index.js\" ",
@@ -27,14 +29,18 @@
     "@testing-library/react": "^10.4.5",
     "@testing-library/user-event": "^12.0.11",
     "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/ejs": "^3.0.4",
     "@types/express": "^4.17.6",
     "@types/jest": "^26.0.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "^7.0.2",
     "@types/mongoose": "^5.7.29",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.14",
+    "@types/node-cron": "^2.0.3",
     "@types/nodemon": "^1.19.0",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
@@ -63,12 +69,16 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
     "kremling": "^2.0.4",
     "mongoose": "^5.9.21",
     "morgan": "^1.10.0",
+    "node-cron": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
